2008-03-10  Jason Clinton  <me@jasonclinton.com>
 
	* src/lib/ai.py: Commit fix for blocker #517347. AI was considered
	losing after a resign occured.

2008-03-02  Robert Ancell  <robert.ancell@gmail.com>

	* src/glchess.in.in: Re-add pygtk.require() call (Bug #521154).

2008-03-02  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/chessview.py: Handle gtk.gtkgl.widget_get_gl_drawable() returning
	  None (bugs #488902 and #512068).
        * src/lib/ai.py: Made AI monitor process more resiliant to OSError exceptions (bug
          #517347).

2008-02-19  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/opengl/new_models.py: Use OpenGL vertex arrays to speed up initial
	  rendering time ~6x. Reduces startup time in 3D mode from 5s to 2s on my system.
	* src/lib/gtkui/chessview.py: Add translator comments (Bug #517320)
	* src/lib/gtkui/network.py: Remove unused translation strings (Bug #517320)

2008-02-16  Robert Ancell  <robert.ancell@gmail.com>

        * src/lib/chess/board.py: Fix castling regression (Bug #516459)
	* src/lib/config.py: Catch GError exceptions from GConf (Bug #489878)
	* src/lib/scene/cairo/__init__.py: Pixel align the board (Bug #443451)
	* src/lib/display.py: Fix wrong player moving when changing to 3D mode (Bug #516818)

2008-02-11  Robert Ancell  <robert.ancell@gmail.com>

        * src/lib/gtkui/network.py: Handle unexpected throbber images (Bug #511693)
	* Fix a number of bugs when switching GGZ servers

2008-01-26  Andreas Røsdal  <andreasr@gnome.org>

	* data/ai.xml:
	* help/C/glchess.xml: Add support for Shredder Classic 3.

2008-01-25  Robert Ancell  <robert.ancell@gmail.com>

	* Set new/load/save/preferences/about dialogs to be transient of the main application
	  window (always centered and on top, not in window list) (Bug #510911).
        * src/lib/gtkui/network.py: Handle the case where the throbber image is only one
          frame (Bug #511693)

2008-01-20  Andreas Røsdal  <andreasr@gnome.org>
