@@ -1,3 +1,7 @@
+2008-03-11  Robert Ancell  <robert.ancell@gmail.com>
+
+	* src/lib/scene/opengl/opengl.py: Add board numbering to 3D mode (bug #392286)
+
 2008-03-10  Jason Clinton  <me@jasonclinton.com>
  
 	* src/lib/ai.py: Commit fix for blocker #517347. AI was considered
